k8s/nginx.ingress.daemon-set.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
# https://kubernetes.github.io/ingress-nginx/
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-daemon-set
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: default
      hostNetwork: true
      restartPolicy: Always
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/google_containers/nginx-ingress-controller:0.23.0
          name: nginx-ingress
          args:
            - /nginx-ingress-controller
            - --annotations-prefix=nginx.ingress.kubernetes.io
          resources:
            requests:
              cpu: 100m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
