k8s/traefik.ingress.daemon-set.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
# https://docs.traefik.io/user-guide/kubernetes/
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: traefik-ingress-daemon-set
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        app: traefik-ingress
    spec:
      serviceAccountName: default
      hostNetwork: true
      restartPolicy: Always
      containers:
        - image: traefik
          name: traefik-ingress
          resources:
            requests:
              cpu: 100m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: admin
              containerPort: 8080
              hostPort: 8080
          args:
            - --web
            - --kubernetes
