k8s/ingress.service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: kube-system
spec:
  selector:
    app: ingress
  ports:
  - name: admin
    port: 8080
    targetPort: 8080
