k8s/traefik.admin.service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-service
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress
  ports:
    - name: admin
      port: 8080
      targetPort: 8080
