k8s/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://docs.traefik.io/user-guide/kubernetes/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
          - path: /.admin
            backend:
              serviceName: ingress-service
              servicePort: admin
